New ui for dashboard and my visits

--- a/app/src/main/res/drawable/round_corner_primary_light.xml
+++ b/app/src/main/res/drawable/round_corner_primary_light.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="270"
-        android:endColor="@color/colorPrimaryDark"
-        android:startColor="@color/colorPrimaryDark"
+        android:endColor="@color/colorPrimary"
+        android:startColor="@color/colorPrimary"
         android:type="linear" />
     <corners
         android:bottomLeftRadius="16dip"
