--- a/app/src/main/res/layout/activity_appointments.xml
+++ b/app/src/main/res/layout/activity_appointments.xml
@@ -5,19 +5,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.appointments.AppointmentsActivity">
+
+    <LinearLayout
+        android:id="@+id/header_layout"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+
+
+        <RelativeLayout
+            android:id="@+id/btn_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical"
+            android:onClick="closeActivity"
+            android:visibility="visible">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_baseline_arrow_back_24" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="15dp"
+            android:fontFamily="@font/lato_bold"
+            android:includeFontPadding="false"
+            android:text="@string/my_vistis"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+
+    </LinearLayout>
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        app:tabTextColor="@color/white"
-        app:tabIndicatorHeight="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
-    </com.google.android.material.tabs.TabLayout>
+        android:layout_below="@+id/header_layout"
+        android:background="@color/colorPrimary"
+        app:tabIndicatorColor="@color/orange2"
+        app:tabIndicatorHeight="4dp"
+        app:tabTextColor="@color/white"></com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tabLayout"
+        android:paddingTop="16dip"
         tools:layout_editor_absoluteX="8dp" />
+
 </RelativeLayout>
