--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
+    android:gravity="center"
     tools:context=".activities.loginActivity.LoginActivity">
 
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none"
+        android:layout_height="match_parent"
         android:fillViewport="true"
-        android:overScrollMode="never">
+        android:overScrollMode="never"
+        android:scrollbars="none">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical">
 
             <ImageView
@@ -32,20 +33,20 @@
 
             <LinearLayout
                 android:id="@+id/ll_center"
-                android:animateLayoutChanges="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/iv_logo"
-                android:layout_marginEnd="30dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="30dp"
+                android:layout_marginEnd="30dp"
+                android:animateLayoutChanges="true"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
                     android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -62,21 +63,21 @@
                         android:layout_marginStart="10dp"
                         android:textColor="@color/white"
                         android:textColorHint="@color/font_black_5"
-                        app:passwordToggleTint="@color/white"
-                        android:theme="@style/MyEditTextTheme">
+                        android:theme="@style/MyEditTextTheme"
+                        app:passwordToggleTint="@color/white">
 
                         <EditText
                             android:id="@+id/et_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColorHint="@color/font_black_5"
+                            android:fontFamily="@font/lato_regular"
                             android:imeOptions="actionNext"
                             android:inputType="number"
                             android:maxLength="10"
-                            android:fontFamily="@font/lato_regular"
-                            android:theme="@style/MyEditTextTheme"
                             android:textColor="@color/white"
-                            android:textSize="16sp" />
+                            android:textColorHint="@color/font_black_5"
+                            android:textSize="16sp"
+                            android:theme="@style/MyEditTextTheme" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -84,14 +85,14 @@
 
                 <LinearLayout
                     android:id="@+id/llOtp"
-                    android:visibility="gone"
-                    tools:visibility="visible"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="20dp"
-                    android:orientation="horizontal">
+                    android:layout_marginEnd="10dp"
+                    android:orientation="horizontal"
+                    android:visibility="gone"
+                    tools:visibility="visible">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -105,24 +106,24 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:textColor="@color/white"
                         android:hint="@string/prompt_otp"
+                        android:textColor="@color/white"
                         android:textColorHint="@color/font_black_5"
-                        app:passwordToggleTint="@color/white"
                         android:theme="@style/MyEditTextTheme"
-                        app:passwordToggleEnabled="true">
+                        app:passwordToggleEnabled="true"
+                        app:passwordToggleTint="@color/white">
 
                         <EditText
                             android:id="@+id/et_password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColorHint="@color/font_black_5"
+                            android:fontFamily="@font/lato_regular"
                             android:imeOptions="actionDone"
                             android:maxLength="50"
                             android:maxLines="1"
-                            android:fontFamily="@font/lato_regular"
-                            android:textColor="@color/white"
                             android:singleLine="true"
+                            android:textColor="@color/white"
+                            android:textColorHint="@color/font_black_5"
                             android:textSize="16sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -131,18 +132,18 @@
 
                 <TextView
                     android:id="@+id/tvResendOtp"
-                    android:text="@string/resend_otp"
-                    android:layout_marginTop="4dp"
-                    android:visibility="gone"
-                    tools:visibility="visible"
-                    android:minHeight="32dp"
-                    android:gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="end"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="10dp"
                     android:fontFamily="@font/lato_regular"
+                    android:gravity="center"
+                    android:minHeight="32dp"
+                    android:text="@string/resend_otp"
                     android:textColor="@color/white"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
                 <Button
                     android:id="@+id/email_sign_in_button"
@@ -159,62 +160,56 @@
 
                 <TextView
                     android:id="@+id/cant_login_id"
-                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="15dp"
-                    android:paddingBottom="5dp"
-                    android:paddingEnd="10dp"
-                    android:paddingStart="10dp"
-                    android:includeFontPadding="false"
-                    android:paddingTop="5dp"
                     android:fontFamily="@font/lato_bold"
+                    android:includeFontPadding="false"
+                    android:paddingStart="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingEnd="10dp"
+                    android:paddingBottom="5dp"
                     android:text="@string/cant_login_user"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    />
+                    android:visibility="gone" />
 
 
                 <TextView
                     android:id="@+id/txt_signup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/lato_regular"
                     android:gravity="center_horizontal"
                     android:text="@string/txt_sign_up_option"
                     android:textColor="@color/white"
-                    android:fontFamily="@font/lato_regular"
-                    android:textSize="16sp"
                     android:textColorLink="@color/white"
-                    />
+                    android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/sign_up_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/button_bg_rounded_corners"
-                    android:text="@string/title_sign_up"
-                    android:fontFamily="@font/lato_bold"
-                    android:textColor="@color/button_text_color"
-                    android:textSize="16sp"
+                    android:layout_marginEnd="10dp"
                     android:layout_marginBottom="10dp"
-                    />
-
-
-
+                    android:background="@drawable/button_bg_rounded_corners"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="@string/title_sign_up"
+                    android:textColor="@color/button_text_color"
+                    android:textSize="16sp" />
 
 
             </LinearLayout>
 
         </RelativeLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
 </RelativeLayout>
