--- a/app/src/main/res/layout/home_recycler_view.xml
+++ b/app/src/main/res/layout/home_recycler_view.xml
@@ -1,61 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardview_recycler"
+        android:id="@+id/cardview_recycler_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10sp"
-        app:cardElevation="5sp"
-        android:layout_margin="10sp">
+        android:layout_marginHorizontal="16dip"
+        android:layout_marginTop="8dip"
+        android:layout_marginBottom="8dip"
+        app:cardBackgroundColor="@color/orange2"
+        app:cardCornerRadius="16dip"
+        app:cardElevation="8dip">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="10">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dip"
+            app:cardBackgroundColor="@color/red_light_1"
+            app:cardCornerRadius="16dip"
+            app:cardElevation="8dip">
 
-            <TextView
-                android:id="@+id/recycler_day_textview"
-                android:layout_width="0dp"
-                android:layout_weight="3"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Day 1"
-                android:fontFamily="@font/lato_bold"
-                android:textSize="18sp"
-                android:gravity="center_vertical"
-                android:paddingVertical="15sp"
-                android:layout_gravity="center"
-                android:paddingStart="15sp"/>
+                android:orientation="vertical"
+                android:padding="8dip">
 
-            <TextView
-                android:id="@+id/recycler_date_textview"
-                android:layout_width="0dp"
-                android:layout_weight="6.5"
-                android:layout_height="wrap_content"
-                tools:text="2020-06-08"
-                android:fontFamily="@font/lato_regular"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:layout_gravity="center"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/recycler_tick_imageview"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="10sp"
-                tools:src="@drawable/ic_prescription_green"/>
+                    <TextView
+                        android:id="@+id/title_label_1_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/lato_bold"
+                        android:gravity="center_vertical"
+                        android:paddingStart="8dip"
+                        android:paddingTop="4dip"
+                        android:paddingEnd="8dip"
+                        android:paddingBottom="4dip"
+                        android:text="@string/self_assessment_label"
+                        android:textColor="@color/gray_6"
+                        android:textSize="16sp" />
 
-        </LinearLayout>
+                    <View
+                        android:layout_width="1dip"
+                        android:layout_height="24dip"
+                        android:layout_alignTop="@+id/title_label_1_tv"
+                        android:layout_alignBottom="@+id/title_label_1_tv"
+                        android:layout_toEndOf="@+id/title_label_1_tv"
+                        android:background="@color/gray_3" />
+
+                    <TextView
+                        android:id="@+id/title_label_2_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_toEndOf="@+id/title_label_1_tv"
+                        android:fontFamily="@font/lato_regular"
+                        android:gravity="center_vertical"
+                        android:paddingStart="8dip"
+                        android:paddingTop="4dip"
+                        android:paddingEnd="8dip"
+                        android:paddingBottom="4dip"
+                        android:text="12/06/2021"
+                        android:textColor="@color/gray_4"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/note_tv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/title_label_1_tv"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/lato_regular"
+                        android:gravity="center_vertical"
+                        android:padding="8sp"
+                        android:paddingVertical="15sp"
+                        android:text="12/06/2021"
+                        android:textColor="@color/gray_6"
+                        android:textSize="13sp" />
+
+                    <TextView
+                        android:id="@+id/recycler_day_textview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/lato_bold"
+                        android:gravity="center_vertical"
+                        android:paddingVertical="15sp"
+                        android:paddingStart="15sp"
+                        android:text="Day 1"
+                        android:textSize="18sp"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/recycler_date_textview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/lato_regular"
+                        android:gravity="center"
+                        android:textSize="16sp"
+                        android:visibility="gone"
+                        tools:text="2020-06-08" />
+
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/prescription_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dip">
+
+                    <TextView
+                        android:id="@+id/prescription_status_tv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/lato_regular"
+                        android:gravity="center_vertical"
+                        android:padding="8sp"
+                        android:paddingVertical="15sp"
+                        android:text="@string/waiting_for_doctor_s_prescription"
+                        android:textColor="@color/gray_6"
+                        android:textSize="13sp" />
+
+                    <ImageView
+                        android:id="@+id/recycler_tick_imageview"
+                        android:layout_width="24dip"
+                        android:layout_height="24dip"
+                        android:layout_alignParentEnd="true"
+                        android:layout_gravity="center"
+                        android:layout_margin="8dip"
+                        tools:src="@drawable/prescription_new_icon" />
+                </RelativeLayout>
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
     </androidx.cardview.widget.CardView>
-
 
 
 </LinearLayout>
