new question in mindmap, summary & registration page ui done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimary">#3A5084</color> //385399 //#002A6C
     <color name="colorPrimaryDark">#212D49</color> //2014EB //
     <color name="colorPrimaryLight">#C5CAE9</color> //D1C4E9 //#C5CAE9
-    <color name="colorAccent">#C04F60</color> //448AFF //#002A6C
+    <color name="colorAccent">#0091EA</color> //448AFF //#002A6C
 
     <color name="act_background">#E5E5E5</color>
 
