IS-108 - Number format issue fixed

--- a/app/src/main/res/layout/dialog_1_number_picker.xml
+++ b/app/src/main/res/layout/dialog_1_number_picker.xml
@@ -17,6 +17,6 @@
         android:id="@+id/et_enter_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"/>
+        android:inputType="numberDecimal"/>
 
 </LinearLayout>
