IS-115,113, 111 issue fixed

--- a/app/src/main/res/layout/activity_splash_activity.xml
+++ b/app/src/main/res/layout/activity_splash_activity.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingTop="24dip"
-        android:paddingHorizontal="12dp">
+        android:paddingHorizontal="12dp"
+        android:paddingTop="24dip">
 
         <ImageView
             android:layout_width="80dip"
@@ -152,14 +152,15 @@
             android:padding="12dip">
 
             <TextView
+                android:id="@+id/tv_hindi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_hindi"
-                android:fontFamily="@font/lato_regular"
                 android:layout_below="@+id/partnership_label_tv"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="3dp"
+                android:fontFamily="@font/lato_regular"
                 android:paddingStart="8dip"
                 android:paddingEnd="8dip"
-                android:layout_margin="3dp"
                 android:text="@string/in_partnership_with_state_government_of"
                 android:textAlignment="center"
                 android:textColor="@color/white"
@@ -169,13 +170,13 @@
                 android:id="@+id/partnership_label_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:layout_marginStart="3dp"
                 android:layout_marginEnd="3dp"
                 android:fontFamily="@font/lato_regular"
                 android:paddingStart="8dip"
-                android:layout_centerHorizontal="true"
                 android:paddingEnd="8dip"
-                android:text="राज्य सरकार झारखंड, एमपी के साझेदारी में"
+                android:text="राज्य सरकार झारखंड, एमपी और सिक्किम के साझेदारी में"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
@@ -240,6 +241,7 @@
                         android:textStyle="bold" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
