--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -561,6 +561,7 @@
         <item>Jharkhand</item>
         <item>Madhya Pradesh</item>
         <item>Sikkim</item>
+        <item>Other</item>
     </string-array>
 
     <string-array name="state_values_hi">
@@ -568,6 +569,7 @@
         <item>झारखण्ड</item>
         <item>मध्य प्रदेश</item>
         <item>सिक्किम</item>
+        <item>अन्य</item>
     </string-array>
 
     <!--Sikkim Info Start-->
@@ -595,6 +597,7 @@
         <item>Rongli</item>
         <item>Samdong</item>
         <item>Sang</item>
+        <item>Other</item>
     </string-array>
 
     <string-array name="west_block_values_en">
@@ -606,6 +609,7 @@
         <item>Soreng</item>
         <item>Tashiding</item>
         <item>Yuksom</item>
+        <item>Other</item>
     </string-array>
 
     <string-array name="north_block_values_en">
@@ -615,6 +619,7 @@
         <item>Hee Gyathang</item>
         <item>Passingdong</item>
         <item>Phodong</item>
+        <item>Other</item>
     </string-array>
 
     <string-array name="south_block_values_en">
@@ -626,6 +631,7 @@
         <item>Temi</item>
         <item>Tokal Bermiok</item>
         <item>Yangyang</item>
+        <item>Other</item>
     </string-array>
 
     <string-array name="east_block_values_hi">
@@ -637,6 +643,7 @@
         <item>रोंगली</item>
         <item>समडोंग</item>
         <item>सेंग</item>
+        <item>अन्य</item>
     </string-array>
 
     <string-array name="west_block_values_hi">
@@ -648,6 +655,7 @@
         <item>सोरेन्ग</item>
         <item>ताशिदिंग</item>
         <item>युकसोम</item>
+        <item>अन्य</item>
     </string-array>
 
     <string-array name="north_block_values_hi">
@@ -657,6 +665,7 @@
         <item>ही ग्याथांग</item>
         <item>पासिंगडोंग</item>
         <item>फोडोंग</item>
+        <item>अन्य</item>
     </string-array>
 
     <string-array name="south_block_values_hi">
@@ -668,6 +677,7 @@
         <item>टेमि</item>
         <item>तोकल बरमियोक</item>
         <item>यांगयांग</item>
+        <item>अन्य</item>
     </string-array>
     <!--Sikkim info END-->
 
@@ -677,6 +687,7 @@
         <item>East Singhbhum</item>
         <item>Bokaro</item>
         <item>Dhanbad</item>
+        <item>Other</item>
     </string-array>
 
     <string-array name="jh_city_values_hi">
@@ -685,18 +696,22 @@
         <item>पूर्वी सिंहभूम</item>
         <item>बोकारो</item>
         <item>धनबाद </item>
+        <item>अन्य</item>
     </string-array>
 
     <string-array name="mp_city_values_en">
         <item>Select</item>
         <item>Khandwa</item>
         <item>Rajgarh</item>
+        <item>Others</item>
+
     </string-array>
 
     <string-array name="mp_city_values_hi">
         <item>चयन करें</item>
         <item>खंडवा</item>
         <item>राजगढ़</item>
+        <item>अन्य</item>
     </string-array>
 
     <!--Ranchi Block Values...-->
@@ -720,6 +735,8 @@
         <item>Lapung</item>
         <item>Bundu</item>
         <item>Tamar</item>
+        <item>Ranchi Urban</item>
+        <item>Other</item>
     </string-array>
 
     <!--East Singhbhum Values...-->
@@ -736,6 +753,7 @@
         <item>Musabani</item>
         <item>Patamda</item>
         <item>Potka</item>
+        <item>Other</item>
     </string-array>
 
     <!--Bokaro Values...-->
@@ -750,6 +768,7 @@
         <item>Kasmar</item>
         <item>Nawadih</item>
         <item>Peterwar</item>
+        <item>Other</item>
     </string-array>
 
     <!--Dhanbad Values...-->
@@ -765,12 +784,13 @@
         <item>Purvi Tundi</item>
         <item>Topchanchi</item>
         <item>Tundi</item>
+        <item>Other</item>
     </string-array>
 
     <!--Default Block Values...-->
     <string-array name="default_block_values_en">
         <item>Select</item>
-        <item>Invalid</item>
+        <item>Other</item>
     </string-array>
 
     <!--Ranchi Block Values...-->
@@ -794,6 +814,8 @@
         <item>लापुंग</item>
         <item>बुन्दु</item>
         <item>तामार</item>
+        <item>रांची अर्बन</item>
+        <item>अन्य</item>
     </string-array>
 
     <!--East Singhbhum Values...-->
@@ -810,6 +832,7 @@
         <item>मुसाबनी</item>
         <item>पतमदा</item>
         <item>पोटका</item>
+        <item>अन्य</item>
     </string-array>
 
     <!--Bokaro Values...-->
@@ -824,6 +847,7 @@
         <item>कसमारी</item>
         <item>नवादिह</item>
         <item>पीटरवार</item>
+        <item>अन्य</item>
     </string-array>
 
     <!--Dhanbad Values...-->
@@ -839,12 +863,13 @@
         <item>पूर्वी टुंडी</item>
         <item>तोपचांची</item>
         <item>टुंडी</item>
+        <item>अन्य</item>
     </string-array>
 
     <!--Default Block Values...-->
     <string-array name="default_block_values_hi">
         <item>चयन करें</item>
-        <item>अमान्य</item>
+        <item>अन्य</item>
     </string-array>
 
     <string-array name="mp_block_values_en">
@@ -853,6 +878,18 @@
     </string-array>
 
     <string-array name="mp_block_values_hi">
+        <item>चयन करें</item>
+        <item>अन्य</item>
+    </string-array>
+
+    <!--Default City Values...-->
+    <string-array name="default_city_values_en">
+        <item>Select</item>
+        <item>Other</item>
+    </string-array>
+
+    <!--Default city Values...-->
+    <string-array name="default_city_values_hi">
         <item>चयन करें</item>
         <item>अन्य</item>
     </string-array>
