--- a/app/src/main/res/layout/item_pdf.xml
+++ b/app/src/main/res/layout/item_pdf.xml
@@ -14,31 +14,33 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:background="@color/colorPrimaryLight"
-            android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="128dp">
+            android:layout_height="100dp"
+            android:background="@color/white"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/thumbnail"
-                android:scaleType="centerCrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scaleType="centerInside"
                 tools:src="@drawable/ic_double_masking" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="56dip"
             android:layout_gravity="center_horizontal"
+            android:background="@color/colorPrimary"
             android:ellipsize="end"
             android:fontFamily="@font/lato_regular"
             android:gravity="center"
-            android:maxLines="2"
-            android:padding="8dip"
+            android:maxLines="3"
+            android:padding="4dip"
             android:textAlignment="center"
-            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:textSize="12sp"
             tools:text="@string/in_partnership_with_state_government_of" />
 
     </LinearLayout>
