--- a/app/src/main/res/layout/cardview_medical_facility.xml
+++ b/app/src/main/res/layout/cardview_medical_facility.xml
@@ -56,6 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:autoLink="phone"
                     android:layout_marginVertical="2dp"
                     tools:text="Phone no." />
 
@@ -68,9 +69,9 @@
                 android:layout_weight="0.5"
                 android:layout_gravity="end|center_vertical"
                 android:layout_margin="10dp"
-                android:background="@drawable/oval_home_notification"
+                android:background="@drawable/oval_home_count"
                 android:padding="5dp"
-                android:src="@drawable/ic_add_24dp" />
+                android:src="@drawable/ic_baseline_directions_24" />
 
         </LinearLayout>
     </FrameLayout>
