Raw strings added in resource file + UI modified.

--- a/app/src/main/res/menu/home_popup_menu.xml
+++ b/app/src/main/res/menu/home_popup_menu.xml
@@ -7,7 +7,7 @@
 
     <item
         android:id="@+id/medical_facility"
-        android:title="Health Facilities" />
+        android:title="@string/health_facilities" />
 
     <item
         android:id="@+id/logout"
