--- a/app/src/main/res/layout/activity_choose_language.xml
+++ b/app/src/main/res/layout/activity_choose_language.xml
@@ -1,56 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/padding_screen"
+    android:background="@color/white"
     android:orientation="vertical"
-    tools:context="org.intelehealth.swasthyasamparkp.activities.chooseLanguageActivity.ChooseLanguageActivity"
-    android:background="@color/white">
+    android:padding="@dimen/padding_screen"
+    tools:context="org.intelehealth.swasthyasamparkp.activities.chooseLanguageActivity.ChooseLanguageActivity">
 
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@color/transparent"
-        android:id="@+id/backButton"
-        android:visibility="gone"
-        android:src="@drawable/svg_header_left_arrow"
-        android:padding="10dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/lato_regular"
-        android:text="@string/choose_lang_title"
-        android:layout_marginTop="@dimen/margin_title_top"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="@dimen/title_text_size"
-        android:textAlignment="viewStart"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
-
-    <ListView
-        android:id="@+id/language_listview"
+    <LinearLayout
+        android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_between_views"
-        android:layout_marginBottom="@dimen/margin_between_views"
-        android:layout_weight="1"
-        android:fontFamily="@font/lato_regular" />
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/backButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@color/transparent"
+            android:padding="10dp"
+            android:src="@drawable/svg_header_left_arrow"
+            android:visibility="gone" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_title_top"
+            android:fontFamily="@font/lato_regular"
+            android:text="@string/choose_lang_title"
+            android:textAlignment="viewStart"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textColor="@color/black"
+            android:textSize="@dimen/title_text_size"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <Button
+        android:id="@+id/save_button"
         android:layout_width="@dimen/save_button_width"
         android:layout_height="wrap_content"
-        android:id="@+id/save_button"
-        android:layout_gravity="bottom|center"
-        android:text="@string/save"
-        android:fontFamily="@font/lato_regular"
-        android:textStyle="bold"
-        android:textColor="@color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/margin_between_views"
         android:background="@drawable/button_bg_rounded_blue"
-        android:layout_marginBottom="@dimen/margin_between_views"/>
+        android:fontFamily="@font/lato_regular"
+        android:text="@string/save"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
-</LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/language_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/save_button"
+        android:layout_below="@+id/header_layout"
+        android:layout_marginHorizontal="16dip"
+        android:layout_marginVertical="16dip"
+        android:scrollbars="none"
+        android:visibility="visible" />
+
+
+</RelativeLayout>
 
 
