Privacy notice formatting changes done

--- a/app/src/main/res/layout/activity_privacy_notice_2.xml
+++ b/app/src/main/res/layout/activity_privacy_notice_2.xml
@@ -85,8 +85,7 @@
                 android:padding="10dp"
                 android:textAlignment="gravity"
                 android:textColor="@color/black"
-                android:textFontWeight="1"
-                android:textStyle="bold" />
+                android:textFontWeight="1" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
